Salesforce Assignment/Assignment_2/src/objects/ValidationObject__c.object
<CustomObject>
    <fields>
        <fullName>Credit_Card_Number__c</fullName>
        <label>Credit_Card_Number</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DateField__c</fullName>
        <description>Validates that the value of a custom date field is a weekday (not Saturday or Sunday).</description>
        <label>Date Field</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Mix_Pct__c</fullName>
        <label>Mix Pct</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Multiple_of_5__c</fullName>
        <label>Multiple of 5</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>ValidationObject</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>ValidationObject Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>ValidationObjects</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>Day_must_be_week_day</fullName>
        <active>true</active>
        <description>Validates that the value of a custom date field is a weekday (not Saturday or Sunday).</description>
        <errorConditionFormula>CASE(MOD( DateField__c  - DATE(1900, 1, 7), 7),
0, 0,
6, 0,
1) = 0</errorConditionFormula>
        <errorMessage>custom date field must be a weekday (not Saturday or Sunday).</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>FormatOfCreditCard</fullName>
        <active>true</active>
        <description>Validates that a custom text field called Credit_Card_Number is formatted in 9999-9999-9999-9999 or 9999999999999999 number format when it is not blank.</description>
        <errorConditionFormula>NOT( REGEX( Credit_Card_Number__c , &quot;(((\\d{4}-){3}\\d{4})|\\d{16})?&quot;))</errorConditionFormula>
        <errorMessage>Credit_Card_Number is not in format</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Mix_Pct_less_than_100</fullName>
        <active>true</active>
        <description>Validates that a custom field called Mix Pct is between 0 and 100%.</description>
        <errorConditionFormula>OR(
   Mix_Pct__c &gt; 1.0,
   Mix_Pct__c &lt; 0.0
)</errorConditionFormula>
        <errorMessage>Mix Pct must be in between 0 and 100%.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Multiple_of_5_number</fullName>
        <active>true</active>
        <description>Validates that a custom field called Multiple of 5 is a multiple of five.</description>
        <errorConditionFormula>MOD( Multiple_of_5__c, 5) &lt;&gt; 0</errorConditionFormula>
        <errorMessage>custom field called Multiple of 5 is not a multiple of five</errorMessage>
    </validationRules>
</CustomObject>